Fixed a fault that caused extra spacing to appear in the "Jump To Date" dialog.

--- a/src/calendar.js.scss
+++ b/src/calendar.js.scss
@@ -2414,6 +2414,7 @@ div.jump-to-date {
 
         input[type="date"] {
             @include input-fields( 40px );
+            margin-bottom: 0;
         }
 
         input:disabled {
